project 4 - rough draft
mostly done at this point...definitley some room for cutting and cleaning up...this one ended up being longer and more difficult than I thought it would be...will most likely submit for review tomorrow

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,5 +3,22 @@
 //====================
 
 * {
-  border: 1px solid black;
+  //border: 1px solid black;
+  font-family: $primary-font;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	margin-left: 35px;
+	margin-right: 35px;
+	@include container-desktop;
+}
+
+.card {
+	margin-bottom: 30px;
+}
+
+.theme__colors {
+  @extend %theme__colors;
 }
