--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -2,7 +2,8 @@
 //  Utility Imports
 //====================
 
-@import 'extends',
+@import 'variables',
+        'extends',
 				'functions',
 				'mixins',
-				'variables';
+				'placeholders';
