--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+.btn--default, .btn--success, .btn--error, .btn--warning, .btn--info {
+  margin-top: 20px;
+  text-transform: uppercase; }
+
+.theme__colors {
+  font-size: 17.5px;
+  display: block;
+  height: 45px;
+  border-radius: 8px;
+  margin-bottom: 5px; }
+
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -297,7 +309,399 @@ template {
 [hidden] {
   display: none; }
 
-body {
-  border: 1px solid black; }
+* {
+  font-family: "Roboto"; }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 35px;
+  margin-right: 35px; }
+  @media (min-width: 1400px) {
+    .container {
+      margin-left: 175px;
+      margin-right: 175px; } }
+
+.card {
+  margin-bottom: 30px; }
+
+.btn--default {
+  color: white;
+  background-color: #38eeff;
+  display: block;
+  margin-top: 40px; }
+.btn--default[type="submit"] {
+  margin-top: 20px; }
+.btn--success {
+  color: white;
+  background-color: #72d080;
+  display: block; }
+.btn--error {
+  color: white;
+  background-color: #ff7f7f;
+  display: block; }
+.btn--warning {
+  color: white;
+  background-color: #f66334;
+  display: block; }
+.btn--info {
+  color: white;
+  background-color: #8964ae;
+  margin-bottom: 55px;
+  display: block; }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px; }
+
+.form__label--hidden {
+  visibility: hidden; }
+
+.form__input {
+  margin-left: 8px;
+  margin-right: 8px; }
+
+.form__input[placeholder="Username"],
+.form__input[placeholder="Password"] {
+  padding-left: 16px;
+  font-weight: bold;
+  border-bottom: 7px solid #00FFD4;
+  padding-bottom: 12px;
+  margin-bottom: 0px; }
+
+.grid__row {
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
+.grid__col--12 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  margin-bottom: 0px; }
+
+.grid__row:nth-of-type(6) > .theme__colors {
+  background-color: #4cecd1;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(7) > .theme__colors {
+  background-color: #2c9bb8;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(8) > .theme__colors {
+  background-color: #6dd9fa;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(9) > .theme__colors {
+  background-color: #cca4d6;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(10) > .theme__colors:nth-of-type(1) {
+  background-color: #96dfa7;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(10) > .theme__colors:nth-of-type(2) {
+  background-color: #e1a6ab;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(11) > .theme__colors:nth-of-type(1) {
+  background-color: #fcae8f;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(11) > .theme__colors:nth-of-type(2) {
+  background-color: #6dd9fa;
+  padding-left: 10px; }
+
+.grid__row:nth-of-type(12) > .theme__colors {
+  background-color: #e1a6ab;
+  padding-left: 10px; }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(1) {
+    display: flex; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(1) > .grid__col--3 {
+    width: 25%; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(1) > .grid__col--9 {
+    width: 75%; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(3) {
+    display: flex; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(3) > .grid__col--8 {
+    width: 62%; } }
+
+.grid__row:nth-of-type(3) > .grid__col--4 {
+  margin-left: auto;
+  margin-right: auto; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(3) > .grid__col--4 {
+      width: 33%; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(4) {
+    display: flex; } }
+
+.grid__row:nth-of-type(4) > .grid__col--6:nth-of-type(1) {
+  margin-left: auto;
+  margin-right: auto; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(4) > .grid__col--6:nth-of-type(1) {
+      width: 40%; } }
+
+.grid__row:nth-of-type(4) > .grid__col--6:nth-of-type(2) {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(4) > .grid__col--6:nth-of-type(2) {
+      width: 33%; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(5) > .grid__col--12 {
+    flex-direction: row;
+    justify-content: space-between; } }
+  @media (min-width: 1400px) and (min-width: 1400px) {
+    .grid__row:nth-of-type(5) > .grid__col--12 {
+      width: 100%; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(5) > .grid__col--12 > .theme__colors {
+    margin-top: 40px;
+    padding-left: 50px;
+    padding-right: 50px; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(6) {
+    display: flex; } }
+
+.grid__row:nth-of-type(6) > .theme__colors {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(6) > .theme__colors {
+      width: 100%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(6) > .theme__colors {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(7) {
+  justify-content: space-between; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(7) {
+      display: flex; } }
+
+.grid__row:nth-of-type(7) > .theme__colors {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(7) > .theme__colors {
+      width: 49%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(7) > .theme__colors {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(8) {
+  justify-content: space-between; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(8) {
+      display: flex; } }
+
+.grid__row:nth-of-type(8) > .theme__colors {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(8) > .theme__colors {
+      width: 32.66%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(8) > .theme__colors {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(9) {
+  justify-content: space-between; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(9) {
+      display: flex; } }
+
+.grid__row:nth-of-type(9) > .theme__colors {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(9) > .theme__colors {
+      width: 24.5%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(9) > .theme__colors {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(10) {
+  justify-content: space-between; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(10) {
+      display: flex; } }
+
+.grid__row:nth-of-type(10) > .grid__col--5 {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(10) > .grid__col--5 {
+      width: 40%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(10) > .grid__col--5 {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(10) > .grid__col--7 {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(10) > .grid__col--7 {
+      width: 59%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(10) > .grid__col--7 {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(11) {
+  justify-content: space-between; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(11) {
+      display: flex; } }
+
+.grid__row:nth-of-type(11) > .grid__col--8 {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(11) > .grid__col--8 {
+      width: 66.33%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(11) > .grid__col--8 {
+      text-align: center;
+      padding-left: 0px; } }
+
+.grid__row:nth-of-type(11) > .grid__col--4 {
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(11) > .grid__col--4 {
+      width: 32.66%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(11) > .grid__col--4 {
+      text-align: center;
+      padding-left: 0px; } }
+
+@media (min-width: 1400px) {
+  .grid__row:nth-of-type(12) {
+    display: flex; } }
+
+.grid__row:nth-of-type(12) > .theme__colors {
+  margin: auto;
+  height: 33px;
+  padding-top: 12px; }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(12) > .theme__colors {
+      width: 59%; } }
+  @media (min-width: 1400px) {
+    .grid__row:nth-of-type(12) > .theme__colors {
+      text-align: center;
+      padding-left: 0px; } }
+
+.img--avatar {
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px; }
+.img--frame {
+  display: block;
+  margin-top: 35px;
+  border: 1px solid lightgray;
+  padding: 12px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px; }
+.img--logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px; }
+
+.nav {
+  padding-left: 0px;
+  margin-bottom: 25px; }
+  @media (min-width: 1400px) {
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      margin-right: 100px;
+      margin-left: 200px;
+      margin-top: 30px;
+      flex-wrap: wrap; } }
+  .nav__item {
+    list-style-type: none;
+    text-align: center; }
+
+.nav a {
+  display: block;
+  text-decoration: none;
+  color: black;
+  height: 35px;
+  padding-top: 15px;
+  border-radius: 8px;
+  font-size: 17.5px; }
+  @media (min-width: 1400px) {
+    .nav a {
+      padding-left: 5px;
+      padding-right: 5px;
+      height: 30px;
+      padding-top: 10px; } }
+
+.nav a:hover {
+  background-color: #00FFD4;
+  color: white; }
+
+p {
+  padding-left: 10px;
+  font-size: 16.5px;
+  line-height: 25px; }
+
+.headline--secondary {
+  font-size: 16.5px;
+  margin-top: 0px;
+  margin-bottom: 0px; }
+.headline--primary {
+  padding-left: 25px;
+  color: #00FFD4;
+  margin-bottom: 30px; }
+
+.card > p a {
+  text-decoration: none;
+  color: #38eeff;
+  font-weight: bold; }
+
+.blockquote {
+  font-size: 26px;
+  font-style: italic;
+  border-left: 10px solid #00FFD4;
+  border-radius: 8px;
+  padding-left: 10px;
+  margin-right: 30px;
+  margin-left: 20px;
+  margin-bottom: 40px; }
+  @media (min-width: 1400px) {
+    .blockquote {
+      margin-right: 20px;
+      margin-left: 0px;
+      padding-left: 30px; } }
 
 /*# sourceMappingURL=styles.css.map */
